# example-allegro5-physfs

./: CMakeLists.txt  bin2c.c  main.c
